feat: slack integration preferences
